staging/frontend/deployments.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    fluxcd.io/automated: 'true'
    fluxcd.io/tag.app: "semver:~4"
  name: clin-frontend
spec:
  template:
    spec:
      imagePullSecrets:
        - name: images-pull
      containers:
        - image: ferlabcrsj/clin-frontend:99bbcad197bd913e2b5f0e8c0f23e27ca593382f
          name: clin-frontend
